--- a/boids.html
+++ b/boids.html
@@ -42,7 +42,7 @@
           Natural selection seems as impossible as a blind watchmaker, assembling beautiful creatures that can grow hundreds of feet tall, live
           at the bottom of the ocean, or communicate over hundreds of miles, all in the name of this boring concept of fitness.
           Furthermore, nobody has been able to show that natural selection could have produced all the living things that we see.
-          In order to do that, we would need to know things about the environments, populations, and chance occurences of the distant past
+          In order to do that, we would need to know things about the environments, populations, and chance occurrences of the distant past
           (billions of years ago!) that are impossible to know. 
         </p>
         <p>
