Added GPL license.

--- a/boids.html
+++ b/boids.html
@@ -1,3 +1,6 @@
+<!-- Copyright Rupert Deese 2015 -->
+<!-- Licensed under GNU GPL http://www.gnu.org/licenses/gpl.txt --> 
+
 <html>
     <head>
         <title>Boids test</title>
