Moved files into subdir for cleanliness

--- a/boids.html
+++ b/boids.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <title>Boids test</title>
-        <link rel="stylesheet" type="text/css" href="boids.css">
+        <link rel="stylesheet" type="text/css" href="boids/boids.css">
     </head>
     <body>
         <h1>EVOLVING BOIDS</h1>
@@ -91,14 +91,14 @@
             <li>the difference between the boid's position and its neighbors' positions</li>
           </ol>
           <figure>
-            <img src=boidgenome.png class=center width=171 height=46></img>
+            <img src=boids/boidgenome.png class=center width=171 height=46></img>
             <h5>The boid genome</h5>
           </figure>
           <p>
             Specifically, the boid decides its new acceleration at every moment using the following formula:
           </p>
           <figure>
-            <img src=boideqn.png class=center width=743 height=339></img>
+            <img src=boids/boideqn.png class=center width=743 height=339></img>
             <h5>The boid's governing equation.</h5>
           </figure>
           <h4>Reproduction</h4>
@@ -298,7 +298,7 @@
         <div id=signature>
           <h5>Article and Code by Rupert Deese // <a href="http://rupertdeese.com">rupertdeese.com</a> // @rupehart</h5>
         </div>
-        <script type='text/javascript' src='chart.js'></script>
-        <script type='text/javascript' src='boids.js'></script>
+        <script type='text/javascript' src='boids/chart.js'></script>
+        <script type='text/javascript' src='boids/boids.js'></script>
     </body>
 </html>
