Changed page title.

--- a/boids.html
+++ b/boids.html
@@ -3,7 +3,7 @@
 
 <html>
     <head>
-        <title>Boids test</title>
+        <title>Evolving Boids</title>
         <link rel="stylesheet" type="text/css" href="boids/boids.css">
     </head>
     <body>
